--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# Info
+info.app.name=Hello Microservice
+info.app.version=@project.version@
+spring.main.banner-mode=log
+
 # Spring
 server.port=8080
 server.shutdown=graceful
@@ -11,6 +16,13 @@ spring.datasource.password=password
 # Monitoring
 management.endpoints.web.exposure.include=health,info,env,configprops,loggers,metrics,prometheus
 management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
 management.metrics.web.server.request.autotime.percentiles-histogram=false
 spring.jmx.enabled=true
 server.tomcat.mbeanregistry.enabled=true
+
+# Logging
+logging.file.name=logs/microservice-demo.log
+
+# Application
+hello.defaultName=Stranger
