--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,13 @@ spring.datasource.password=password
 management.endpoints.web.exposure.include=health,info,env,configprops,loggers,metrics,prometheus
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
-management.metrics.web.server.request.autotime.percentiles-histogram=false
 spring.jmx.enabled=true
 server.tomcat.mbeanregistry.enabled=true
 
 # Logging
 logging.file.name=logs/microservice-demo.log
+logging.level.com.igt.demo.microservice=TRACE
+hello.method-tracing.enabled=true
 
 # Application
 hello.defaultName=Stranger
