--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.datasource.password=password
 management.endpoints.web.exposure.include=health,info,env,configprops,loggers,metrics,prometheus
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
+management.metrics.export.prometheus.descriptions=false
 spring.jmx.enabled=true
 server.tomcat.mbeanregistry.enabled=true
 
