--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.password=password
 
 # Monitoring
 management.endpoints.web.exposure.include=health,info,env,configprops,loggers,metrics,prometheus
+management.info.env.enabled=true
+management.info.java.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
 management.metrics.export.prometheus.descriptions=false
