--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ management.info.env.enabled=true
 management.info.java.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
-management.metrics.export.prometheus.descriptions=false
+management.prometheus.metrics.export.descriptions=false
 spring.jmx.enabled=true
 server.tomcat.mbeanregistry.enabled=true
 
