--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ management.info.java.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
 management.prometheus.metrics.export.descriptions=false
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
 spring.jmx.enabled=true
 server.tomcat.mbeanregistry.enabled=true
 
