--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
 management.prometheus.metrics.export.descriptions=false
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.percentiles-histogram.method.timed=true
+management.metrics.distribution.percentiles.method.timed=0.5,0.95
 spring.jmx.enabled=true
 server.tomcat.mbeanregistry.enabled=true
 
